# fcgi_vars

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: fcgi_vars.c
test/: lighttpd.conf
